[package]
authors = ["sidit77 <sidit77@gmail.com>"]
name = "inject"
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace]
members = [
    ".",
    "./test-lib"
]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
widestring = "1"
once_cell = "1"
bytemuck = "1"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading"
]}

[profile.release]
lto = true
codegen-units = 1